...
                        ) {
                            TicketRowView(ticket: ticket, currentUser: appState.currentUser)
                        }
                    }
                }
            }
            .navigationTitle("Zgłoszenia")
            .onAppear {
                if isLoading || shouldRefresh {
                    fetchTickets { loadedTickets in
                        self.apiTickets = loadedTickets
                        self.isLoading = false
                        self.shouldRefresh = false
...
